--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,29 +1,51 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
-// https://github.com/microsoft/vscode-dev-containers/tree/v0.205.2/containers/javascript-node
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.205.2/containers/elm
 {
-	"name": "Node.js",
-	"build": {
-		"dockerfile": "Dockerfile",
-		// Update 'VARIANT' to pick a Node version: 16, 14, 12.
-		// Append -bullseye or -buster to pin to an OS version.
-		// Use -bullseye variants on local arm64/Apple Silicon.
-		"args": { "VARIANT": "16-bullseye" }
-	},
+	"name": "Microsoft FAST with Elm",
+	"dockerFile": "Dockerfile",
 
 	// Set *default* container specific settings.json values on container create.
-	"settings": {},
+	"settings": {
+		"editor.formatOnSaveMode": "file",
+		"editor.formatOnSave": true,
+		"editor.defaultFormatter": "elmTooling.elm-ls-vscode",
+		"editor.formatOnPaste": true,
+		"editor.formatOnType": true,
+		"files.insertFinalNewline": true,
+		"files.trimFinalNewlines": true,
+	},
 
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
-		"dbaeumer.vscode-eslint"
+		"Elmtooling.elm-ls-vscode",
+		"ms-vscode.test-adapter-converter",
 	],
 
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+	// 8000 is the default port used for the `elm reactor` command
+	// "forwardPorts": [8000],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
+	// "postCreateCommand": "elm make",
 
-	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "node"
+	// Comment out to connect as root instead. In that case you may need to change the mounts
+	// configuration too. More info: https://aka.ms/vscode-remote/containers/non-root.
+	"remoteUser": "node",
+	
+	// Keeping the elm dependency cache mounted in a volume is both a small performance benefit
+	// when having rebuilt your container. It also solves a problem with the Elm Language Server.
+	// The Elm Language Server uses the dependency cache stored at ~/.elm.
+	// However, the elm compiler uses elm-stuff in the mounted directory which keeps timestamps
+	// telling the elm compiler whether elm.json changed since it last downloaded dependencies.
+	// This data is persisted, but without a volume the ~/.elm dependency cache itself is not
+	// persisted, resulting in a corruption of that relationship.
+	// The Elm Language Server expects the elm compiler to keep ~/.elm up to date, but because
+	// of this failure it will crash continuously when ~/.elm does not store the elm code for
+	// the dependencies. This will usually occur every time the container has been rebuilt
+	// and is manually fixed by deleting the elm-stuff directory which forces the compiler to
+	// redownload dependencies.
+	// Adding this volume will preserve the elm cache between rebuilds though, fixing this issue
+	"mounts": [
+		"source=vscode-devcontainer-elm-dependency-cache,target=/home/node/.elm,type=volume"
+	],
 }
